--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
         "admin-lte": "3.2",
         "bootstrap": "^5.2.3",
         "bootstrap-vue": "^2.23.1",
-        "moment": "^2.29.4"
+        "maska": "^2.1.4",
+        "moment": "^2.29.4",
+        "v-mask": "^2.3.0",
+        "vue-the-mask": "^0.11.1"
     }
 }
