Feature- criação de pedidos

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "maska": "^2.1.4",
         "moment": "^2.29.4",
         "v-mask": "^2.3.0",
+        "vue-router": "^4.1.6",
         "vue-the-mask": "^0.11.1"
     }
 }
