--- a/package.json
+++ b/package.json
@@ -1,33 +1,43 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build"
-    },
-    "devDependencies": {
-        "@inertiajs/inertia": "^0.11.0",
-        "@inertiajs/inertia-vue3": "^0.6.0",
-        "@inertiajs/progress": "^0.2.7",
-        "@tailwindcss/forms": "^0.5.2",
-        "@tailwindcss/typography": "^0.5.2",
-        "@vitejs/plugin-vue": "^4.0.0",
-        "autoprefixer": "^10.4.7",
-        "axios": "^1.2.1",
-        "laravel-vite-plugin": "^0.7.2",
-        "lodash": "^4.17.19",
-        "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.0",
-        "vite": "^4.0.0",
-        "vue": "^3.2.31"
-    },
-    "dependencies": {
-        "admin-lte": "3.2",
-        "bootstrap": "^5.2.3",
-        "bootstrap-vue": "^2.23.1",
-        "maska": "^2.1.4",
-        "moment": "^2.29.4",
-        "v-mask": "^2.3.0",
-        "vue-router": "^4.1.6",
-        "vue-the-mask": "^0.11.1"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build"
+  },
+  "devDependencies": {
+    "@inertiajs/inertia": "^0.11.0",
+    "@inertiajs/inertia-vue3": "^0.6.0",
+    "@inertiajs/progress": "^0.2.7",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.2",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.7",
+    "axios": "^1.2.1",
+    "laravel-vite-plugin": "^0.7.2",
+    "lodash": "^4.17.19",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.0",
+    "vite": "^4.0.0",
+    "vue": "^3.2.31"
+  },
+  "dependencies": {
+    "@inertiajs/vue3": "^1.0.2",
+    "admin-lte": "3.2",
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue": "^2.23.1",
+    "maska": "^2.1.4",
+    "moment": "^2.29.4",
+    "v-mask": "^2.3.0",
+    "vue-router": "^4.1.6",
+    "vue-the-mask": "^0.11.1"
+  },
+  "name": "myecommerce-inertia",
+  "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
+  "version": "1.0.0",
+  "main": "postcss.config.js",
+  "directories": {
+    "test": "tests"
+  },
+  "author": "",
+  "license": "ISC"
 }
